Fix subhead icon alignment firefox

--- a/components/css/main-theme.css
+++ b/components/css/main-theme.css
@@ -154,8 +154,7 @@ img {
     background-image: url('/components/img/pkillian-watermark.png');
     background-size: 50px;
     background-repeat: no-repeat;
-    background-position-x: 100%;
-    background-position-y: 70%;
+    background-position: right;
     margin-right: 92px;
     display: inline;
     float: right;
